--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,14 @@
   "name": "ggizi",
   "version": "0.0.0",
   "devDependencies": {
-    "angular": "~1.3",
-    "angular-mocks": "~1.3",
-    "bootstrap": "~3.1",
-    "angular-bootstrap": "~0.10.0",
+    "angular": "~1.2",
+    "angular-mocks": "~1.2",
+    "angular-animate": "~1.2",
+    "bootstrap": "~3.1.1",
     "angular-ui-router": "~0.2",
-    "angular-busy": "~4.1.2",
-    "angular-sanitize": "~1.3"
+    "angular-sanitize": "~1.2",
+    "angular-bootstrap": "~0.12.0",
+    "angular-loading-bar": "~0.6.0"
   },
   "dependencies": {}
 }
